--- a/package.json
+++ b/package.json
@@ -18,23 +18,27 @@
     "@vueuse/core": "10.1.0",
     "@vueuse/math": "10.1.0",
     "apexcharts-clevision": "3.28.5",
-    "axios": "1.4.0",
+    "axios": "^1.6.5",
     "axios-mock-adapter": "1.21.4",
     "chart.js": "4.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "flag-icons": "^7.1.0",
     "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
     "roboto-fontface": "0.10.0",
     "sass": "1.62.1",
     "unplugin-vue-define-options": "1.3.4",
+    "v-phone-input": "^4.1.1",
     "vue": "3.2.47",
     "vue-chartjs": "5.2.0",
+    "vue-country-flag-next": "^2.3.2",
     "vue-flatpickr-component": "11.0.3",
     "vue-i18n": "9.2.2",
     "vue-prism-component": "2.0.0",
     "vue-router": "4.1.6",
     "vue3-apexcharts": "1.4.1",
+    "vue3-country-region-select": "^1.0.0",
     "vue3-perfect-scrollbar": "1.6.1",
     "vuetify": "3.2.1",
     "webfontloader": "1.6.28"
@@ -69,7 +73,7 @@
     "stylelint-use-logical-spec": "4.1.0",
     "unplugin-auto-import": "0.15.3",
     "unplugin-vue-components": "0.24.1",
-    "vite": "4.3.3",
+    "vite": "^4.5.2",
     "vite-plugin-pages": "0.29.0",
     "vite-plugin-vue-layouts": "0.8.0",
     "vite-plugin-vuetify": "1.0.2",
