--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,5 +90,7 @@
         "borderStyle": "solid"
       }
     ]
-  }
+  },
+  "vetur.trace.server": "messages",
+  "vetur.validation.templateProps": true
 }
