--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass": "1.62.1",
     "unplugin-vue-define-options": "1.3.4",
     "v-phone-input": "^4.1.1",
+    "v3confirm": "^1.1.1",
     "vue": "3.2.47",
     "vue-chartjs": "5.2.0",
     "vue-country-flag-next": "^2.3.2",
